# StrainVector

./: .gitignore  CITATION.cff  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: .paper.yml.un~  lint.yml  paper.yml  tests.yml
docs/: CONTRIBUTING.md  METADATA.md  USAGE.md
scripts/: bootstrap_compare.sh  bootstrap_index.sh  bootstrap_profile.sh
scripts/colab/: README.md  bootstrap_index.sh  bootstrap_profile.sh
strainvector/: __init__.py  __main__.py
strainvector/compare/: __init__.py  compare.py
strainvector/embeddings/: __init__.py  base.py
strainvector/indexing/: __init__.py  build.py  faiss_index.py  vector_store.py
strainvector/io/: __init__.py  fasta.py
strainvector/profiling/: __init__.py  profile.py  search.py
strainvector/util/: logger.py
tests/: README.md  test_basic.py
