[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strainvector"
version = "0.0.1"
description = "An extensible pipeline for embedding-based microbial genome comparison using nucleotide language models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Jacob Lapkin" }
]
keywords = ["metagenomics", "embeddings", "DNA language models", "DNABERT", "bioinformatics", "vector search", "FAISS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Development Status :: 3 - Alpha"
]

[project.urls]
Homepage = "https://github.com/jacoblapkin/strainvector"
Repository = "https://github.com/jacoblapkin/strainvector"
Issues = "https://github.com/jacoblapkin/strainvector/issues"

[project.scripts]
strainvector = "strainvector.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["strainvector*"]
